index page errors are corrected. error in the alignment of discover button and error in the alignment of service calss and also send button in the contacts

--- a/indx.html
+++ b/indx.html
@@ -56,7 +56,7 @@
               However, due to the enormous volume of fish collected, the amount of fish from those natural resources is steadily decreasing. As a result, establishing a commercial fish farming enterprise is essential in order to meet the nutritional needs of the Indian population.
               
               India is endowed with a plethora of rivers, lakes, and other natural water resources.</p>
-              <a class=" btn1">Discover</a>
+              <a class=" btn1 mb-3">Discover</a>
           </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
               <h6>Good quality</h6>
               </div>
               </div>
-              <div class="services mt-5">
+              <div class="services mt-5 mb-3">
                 <i style="float: left;">
                 <img src="images/icon4.png" class="icon-img">
                 </i>
@@ -192,7 +192,7 @@
               </div>
                
               </div>
-              <button type="submit" class="btn btn-primary" style="background: orange;">Send</button>
+              <button type="submit" class="btn btn-primary mb-3" style="background: orange;">Send</button>
             </form>
 
           </div>
