--- a/indx.html
+++ b/indx.html
@@ -27,10 +27,10 @@
                       <div class="collapse navbar-collapse" id="collapsibleNavbar">
                         <ul class="navbar-nav ms-auto" >
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:white">Home</a>
+                            <a class="nav-link" href="indx.html" style="color:white">Home</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:white">About</a>
+                            <a class="nav-link" href="about.html" style="color:white">About</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#" style="color:white">Products</a>
