--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
                       <div class="collapse navbar-collapse" id="collapsibleNavbar">
                         <ul class="navbar-nav ms-auto" >
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:white">Home</a>
+                            <a class="nav-link" href="indx.html" style="color:white">Home</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:white">About</a>
+                            <a class="nav-link" href="about.html" style="color:white">About</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#" style="color:white">Products</a>
@@ -53,24 +53,30 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://th.bing.com/th/id/OIP.45QCzvqI2cQJBwzzV9yHLAHaD4?w=295&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7" class="d-block w-100" alt="..." style="background-size: cover;height:100vh">
-          <div class="carousel-caption d-none d-md-block mb-5">
-            <h1 style="color: white;">First slide label</h1>
-            <p>Some representative placeholder content for the first slide.</p>
+          <div style="background: orange;height:100vh;" class="d-block w-100">
+
+          </div>
+          <div class="carousel-caption  d-md-block mb-5">
+            <h1 style="color: white;font-size: 3em;">People says</h1>
+            <p >This is envisaged for promoting aquaculture activities in small homestead polythene lined ponds where This is envisaged for promoting aquaculture activities in small homestead polythene lined ponds where no other facilities available for culturing fishes.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://th.bing.com/th/id/OIP.6tD9jdmI44hafFzZNAXfAgHaFj?w=208&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7" class="d-block w-100" alt="..."  style="background-size: cover;height:100vh">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+          <div style="background: orange;height:100vh;" class="d-block w-100">
+
+          </div>
+          <div class="carousel-caption  d-md-block mb-5">
+            <h1 style="color: white;font-size: 3em;">People says</h1>
+            <p >This is envisaged for promoting aquaculture activities in small homestead polythene lined ponds where This is envisaged for promoting aquaculture activities in small homestead polythene lined ponds where no other facilities available for culturing fishes.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://th.bing.com/th/id/OIP.2vs_Gumyr1DT6sy6-lXUnQHaE7?w=261&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7" class="d-block w-100" alt="..."  style="background-size: cover;height:100vh">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+          <div style="background: orange;height:100vh;" class="d-block w-100">
+
+          </div>
+          <div class="carousel-caption  d-md-block mb-5">
+            <h1 style="color: white;font-size: 3em;">People says</h1>
+            <p >This is envisaged for promoting aquaculture activities in small homestead polythene lined ponds where This is envisaged for promoting aquaculture activities in small homestead polythene lined ponds where no other facilities available for culturing fishes.</p>
           </div>
         </div>
       </div>
