product page created and linked with all other pages

--- a/indx.html
+++ b/indx.html
@@ -56,7 +56,7 @@
               However, due to the enormous volume of fish collected, the amount of fish from those natural resources is steadily decreasing. As a result, establishing a commercial fish farming enterprise is essential in order to meet the nutritional needs of the Indian population.
               
               India is endowed with a plethora of rivers, lakes, and other natural water resources.</p>
-              <a class=" btn1 mb-3">Discover</a>
+              <a class=" btn1 mb-3" href="http://www.fisheries.kerala.gov.in/about-us">Discover</a>
           </div>
         </div>
       </div>
