--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="about.html" style="color:white">About</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:white">Products</a>
+                            <a class="nav-link" href="product.html" style="color:white">Products</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#" style="color:white">Contact me</a>
