contact page created and link with all other pages

--- a/indx.html
+++ b/indx.html
@@ -33,10 +33,10 @@
                             <a class="nav-link" href="about.html" style="color:white">About</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:white">Products</a>
+                            <a class="nav-link" href="product.html" style="color:white">Products</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:white">Contact me</a>
+                            <a class="nav-link" href="contact.html" style="color:white">Contact me</a>
                           </li>
                         </ul>
                       </div>
