--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="product.html" style="color:white">Products</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:white">Contact me</a>
+                            <a class="nav-link" href="contact.html" style="color:white">Contact me</a>
                           </li>
                         </ul>
                       </div>
